# SentimentAnalysis

./: .gitignore  Deployment.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  SystemArch.md  SystemArchitecture.md  debug_transcription.py  docker-compose.yml  fix_ffmpeg_libs.sh  logging_config.env.example  main.py  pyproject.toml  requirements.txt  test_language_detection_incoming.py
app/: __init__.py  api.py  audio_feature_extractor.py  audio_processor.py  config.py  constants.py  dashboard.py  database.py  emotion_detector.py  enhanced_language_detector.py  logging_config.py  models.py  sentiment_analyzer.py  sentiment_service.py  transcription.py
docs/: ArchDiagrams.md  ArchSummary.md  README.md
examples/: README.md  api_usage_examples.py  curl_examples.sh  emotion_detection_demo.py  example_usage.py  nodejs_examples.js
scripts/: setup.sh  setup_logging.py
tests/: test_api_endpoints.py  test_emotion_detection.py  test_enhanced_language_detection.py  test_language_detection.py  test_logging.py  test_sentiment_analysis.py
