[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-analysis-system"
version = "1.0.0"
description = "A comprehensive sentiment analysis system for audio files using speech-to-text and NLP models"
authors = [
    {name = "Sentiment Analysis Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.7.9",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cntext==1.9.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dateparser==1.2.2",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "filelock==3.18.0",
    "fonttools==4.58.5",
    "fsspec==2025.5.1",
    "ftfy==6.3.1",
    "gensim==4.3.3",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httptools==0.6.4",
    "huggingface-hub==0.33.4",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jieba==0.42.1",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "lazy_loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "lxml==6.0.0",
    "malaya==5.1.1",
    "malaya-boilerplate==0.0.25",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.3",
    "mittens==0.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "narwhals==1.46.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "noisereduce==3.0.3",
    "numba==0.61.2",
    "numpy==1.26.4",
    "openai-whisper==20250625",
    "packaging==25.0",
    "pandas==2.3.1",
    "pdfdocx==1.7",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "plotly==6.2.0",
    "pluggy==1.6.0",
    "pooch==1.8.2",
    "protobuf==6.31.1",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "pydeck==0.9.1",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "PyMuPDF==1.26.3",
    "pypandoc==1.15",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.13.1",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "smart_open==7.3.0.post1",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snownlp==0.12.3",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "SQLAlchemy==2.0.41",
    "starlette==0.47.1",
    "streamlit==1.46.1",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "textblob==0.19.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.2",
    "toml==0.10.2",
    "tomli==2.2.1",
    "torch==2.2.2",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "transformers==4.53.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "Unidecode==1.4.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "vaderSentiment==3.3.2",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "wrapt==1.17.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

docker = [
    "gunicorn>=21.0.0",
]

[project.scripts]
sentiment-analysis = "main:main"

[project.urls]
Homepage = "https://github.com/example/sentiment-analysis-system"
Repository = "https://github.com/example/sentiment-analysis-system"
Documentation = "https://github.com/example/sentiment-analysis-system#readme"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 